<resources>
    <string name="app_name">Droid Cafe</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="intro_text">Droid Desserts</string>
    <string name="donuts">Donuts are glazed and sprinkled with candy.</string>
    <string name="ice_cream_sandwiches">Ice cream sandwiches have chocolate wafers and vanilla filling.</string>
    <string name="froyo">FroYo is premium self-serve frozen yogurt.</string>

    <!-- Toast message to be displayed-->
    <string name="donut_order_message">You ordered a donut.</string>
    <string name="ice_cream_order_message">You ordered an ice cream sandwich.</string>
    <string name="froyo_order_message">You ordered a FroYo.</string>
    <string name="order_textView">OrderView</string>
    <string name="name_label">Name</string>
    <string name="enter_name_hint">enter_name_hint</string>
    <string name="Enter_your_name">Enter your name</string>
    <string name="address_label_text">Address</string>
    <string name="Enter_address_hint"> Enter Address</string>
    <string name="phone">Phone</string>
    <string name="enter_phone_hint">Enter Phone</string>
    <string name="note_label">Note</string>
    <string name="enter_note_hint">Note</string>
    <string name="choose_a_delivery_method">Choose a delivery method:</string>
    <string name="sameday">Same day messenger service</string>
    <string name="nextday">Next day ground delivery</string>
    <string name="pick_up">Pick up</string>
    <string name="action_contact">Contact</string>
    <string name="action_order">Order</string>
    <string name="action_status">Status</string>
    <string name="action_favourites">Favourites</string>

    <string name="action_order_message">You selected Order</string>
    <string name="action_status_message">You selected Status</string>
    <string name="action_favourites_message">You selected Favourites</string>
    <string name="action_contact_message">You selected Contact</string>

    <!-- Spinner array-->
    <string-array name="labels_array">
        <item>Home</item>
        <item>Work</item>
        <item>Mobile</item>
        <item>Other</item>
    </string-array>
</resources>